[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GPUniq"
version = "3.5.2"
description = "Python SDK for GPUniq GPU Meta-Cloud platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "InquirerPy>=0.3.4",
]
authors = [
    {name = "Egor Kalinin", email = "kalinin-egor@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
gg = "gpuniq.cli.main:main"
gpuniq = "gpuniq.cli.main:main"

[project.urls]
Homepage = "https://github.com/GPUniq/GPUniq"
Repository = "https://github.com/GPUniq/GPUniq"
Documentation = "https://github.com/GPUniq/GPUniq#readme"
